; ModuleID = '/home/carl/AnghaBench/kphp-kdb/hints/extr_hints-engine.c_tl_fetch_user_id.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/hints/extr_hints-engine.c_tl_fetch_user_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TL_ERROR_BAD_VALUE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [87 x i8] c"Wrong server: user_id = %d, log_split_mod = %d, log_split_min = %d, log_split_max = %d\00", align 1
@log_split_mod = common dso_local global i32 0, align 4
@log_split_min = common dso_local global i32 0, align 4
@log_split_max = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tl_fetch_user_id() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i64 (...) @tl_fetch_error()
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %6

5:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %20

6:                                                ; preds = %0
  %7 = call i32 (...) @tl_fetch_int()
  store i32 %7, i32* %2, align 4
  %8 = load i32, i32* %2, align 4
  %9 = call i32 @check_user_id(i32 %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %18, label %11

11:                                               ; preds = %6
  %12 = load i32, i32* @TL_ERROR_BAD_VALUE, align 4
  %13 = load i32, i32* %2, align 4
  %14 = load i32, i32* @log_split_mod, align 4
  %15 = load i32, i32* @log_split_min, align 4
  %16 = load i32, i32* @log_split_max, align 4
  %17 = call i32 @tl_fetch_set_error_format(i32 %12, i8* getelementptr inbounds ([87 x i8], [87 x i8]* @.str, i64 0, i64 0), i32 %13, i32 %14, i32 %15, i32 %16)
  br label %18

18:                                               ; preds = %11, %6
  %19 = load i32, i32* %2, align 4
  store i32 %19, i32* %1, align 4
  br label %20

20:                                               ; preds = %18, %5
  %21 = load i32, i32* %1, align 4
  ret i32 %21
}

declare dso_local i64 @tl_fetch_error(...) #1

declare dso_local i32 @tl_fetch_int(...) #1

declare dso_local i32 @check_user_id(i32) #1

declare dso_local i32 @tl_fetch_set_error_format(i32, i8*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
